[package]
name = "nmea0183_feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0"
bytes = "1"


[dependencies.tokio]
version = "1"
features = [ "rt", "rt-multi-thread", "macros"]


[dependencies.tokio-serial]
version = "5"

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dev-dependencies]
rand = "0"
tokio-test = "0"
[dev-dependencies.tokio]
version = "1"
features = ["fs", "io-util", "rt", "rt-multi-thread", "macros"]
